[gd_scene load_steps=17 format=3 uid="uid://bu8nv7leim8od"]

[ext_resource type="Script" uid="uid://b4h4dbu2ryb06" path="res://card/card.gd" id="1_ply2h"]
[ext_resource type="Texture2D" uid="uid://djnq5q44dua12" path="res://sprites/meditation.png" id="2_1n6wr"]
[ext_resource type="FontFile" uid="uid://c6lfcmqrq1huc" path="res://fonts/m3x6.ttf" id="2_trrkg"]
[ext_resource type="StyleBox" uid="uid://dfbpspemk5na" path="res://card/card_data/styles/stylebox/art_stylebox.tres" id="3_6xkbt"]
[ext_resource type="Script" uid="uid://bevi4n8n1jvud" path="res://card/card_data/card_data.gd" id="3_ags6k"]
[ext_resource type="FontFile" uid="uid://cm4gkenj5odhg" path="res://fonts/m5x7.ttf" id="4_1n6wr"]
[ext_resource type="StyleBox" uid="uid://dimhb80rr3nit" path="res://card/card_data/styles/stylebox/image_frame_art_stylebox.tres" id="6_6xkbt"]
[ext_resource type="PackedScene" uid="uid://bslur2hh54tgf" path="res://utility/movement_tween_manager/movement_tween_manager.tscn" id="7_1n6wr"]

[sub_resource type="Resource" id="Resource_7dy67"]
script = ExtResource("3_ags6k")
card_name = "Meditation"
card_cost = 0
card_png = ExtResource("2_1n6wr")
card_description = "Shuffle your discard pile into your deck and draw 1 card."
card_type = 0
card_effect = 0
title_font = 1
card_title_offset = 8
metadata/_custom_type_script = "uid://bevi4n8n1jvud"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6xkbt"]
bg_color = Color(1, 0.905882, 0.839216, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1n6wr"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_ags6k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_6xkbt"]
resource_name = "flip_card_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"apply_card_visual_facedown"
}]
}

[sub_resource type="Animation" id="Animation_1n6wr"]
resource_name = "flip_card_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"apply_card_visual_faceup"
}]
}

[sub_resource type="Animation" id="Animation_7dy67"]
resource_name = "delete"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7dy67"]
_data = {
&"RESET": SubResource("Animation_ags6k"),
&"delete": SubResource("Animation_7dy67"),
&"flip_card_down": SubResource("Animation_6xkbt"),
&"flip_card_up": SubResource("Animation_1n6wr")
}

[node name="Card" type="Control" node_paths=PackedStringArray("movement_tween_manager")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ply2h")
card_data = SubResource("Resource_7dy67")
movement_tween_manager = NodePath("MovementTweenManager")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(88, 128)
layout_mode = 0
offset_left = -44.0
offset_top = -64.0
offset_right = 44.0
offset_bottom = 64.0
pivot_offset = Vector2(44, 64)
theme_override_styles/panel = ExtResource("3_6xkbt")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
offset_left = 2.0
offset_top = 2.0
offset_right = 86.0
offset_bottom = 187.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CostPanelMarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = -11
theme_override_constants/margin_bottom = 1

[node name="CostPanel" type="Panel" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/CostPanelMarginContainer"]
custom_minimum_size = Vector2(9, 9)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6xkbt")

[node name="CostLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/CostPanelMarginContainer/CostPanel"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -6.5
offset_right = 2.0
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.670588, 0.337255, 0.458824, 1)
theme_override_fonts/font = ExtResource("4_1n6wr")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.670588, 0.337255, 0.458824, 1)
theme_override_fonts/font = ExtResource("2_trrkg")
theme_override_font_sizes/font_size = 16
text = "TitlefcadfDASFDF"
horizontal_alignment = 1

[node name="SpacerContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = -10
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 1

[node name="Panel" type="Panel" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/SpacerContainer"]
custom_minimum_size = Vector2(9, 9)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1n6wr")

[node name="PanelContainer" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("6_6xkbt")

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(1, 46)
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0.670588, 0.337255, 0.458824, 1)
theme_override_constants/line_spacing = -2
theme_override_fonts/font = ExtResource("2_trrkg")
theme_override_font_sizes/font_size = 16
text = "This is a description. Lots of things to describe here."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7dy67")
}

[node name="MovementTweenManager" parent="." instance=ExtResource("7_1n6wr")]
